# mslearn-ai-agents

./: .gitignore
Instructions/: 03c-use-agent-tools-with-mcp.md  04-semantic-kernel.md  05-agent-orchestration.md  07-build-agent-in-vs-code.md
Labfiles/: README.md  pyproject.toml
Labfiles/00-generate-architecture-diagram/: .env.example  generate-architecture-diagram.py  generated-architecture-diagram.md
Labfiles/02-build-ai-agent/Python/: agent.py  requirements.txt
Labfiles/03-ai-agent-functions/Python/: agent.py  ticket-b97e18.txt  user_functions.py
Labfiles/03b-build-multi-agent-solution/Python/: agent_triage.py
Labfiles/03c-use-agent-tools-with-mcp/Python/: README.md  client.py  requirements.txt
Labfiles/04-agent-framework/python/: agent-framework.py
Labfiles/05-agent-orchestration/Python/: agents.py
Labfiles/06-build-remote-agents-with-a2a/python/: requirements.txt
Labfiles/06-build-remote-agents-with-a2a/python/routing_agent/: agent.py
Labfiles/06-build-remote-agents-with-a2a/python/title_agent/: agent.py  agent_executor.py  server.py
docs/: ARCHITECTURE-DIAGRAM-GUIDE.md  AzureAIAgentClient-Flow-Diagram.md  architecture-prompt.txt
